# libtropic-stm32

./: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  LICENSE.md  README.md  readme.MD  setup_env  toolchain.cmake  ts_sw_setup.yml
.github/workflows/: build_and_upload_examples.yml  clang_format_check.yml  hello_world_artifact.yml
Inc/: main.h
NUCLEO_F439ZI/: CMakeLists.txt  README.md  flash.sh  readme.MD  run_test.sh
NUCLEO_F439ZI/Inc/: common.h  main.h  stm32f4xx_hal_conf.h  syscalls.h
NUCLEO_F439ZI/Src/: main.c  stm32f4xx_hal_msp.c  syscalls.c  sysmem.c
NUCLEO_F439ZI/Src/mbedtls_v4/: crypto_config.h  mbedtls_config.h  mbedtls_platform.c
NUCLEO_L432KC/: CMakeLists.txt  README.md  flash.sh  run_test.sh  toolchain.cmake
NUCLEO_L432KC/Inc/: main.h  stm32l4xx_hal_conf.h
NUCLEO_L432KC/Src/: main.c  stm32l4xx_hal_msp.c  syscalls.c
Src/: main.c  stm32f4xx_hal_msp.c
scripts/verification/: Dockerfile  docker-compose.yml  entrypoint.sh
